# binscan

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  binscan.opam  dune-project
.github/workflows/: ci.yml
lib/: dune  entropy.ml  entropy.mli  io.ml  io.mli  report.ml  report.mli  strings.ml  strings.mli  types.mli
test/: dune  test_binscan.ml
